rename images/ add personal page

--- a/css/landing.css
+++ b/css/landing.css
@@ -1,3 +1,9 @@
+body {
+	background: #fc00ff;
+	background: -webkit-linear-gradient(to right, #00dbde, #fc00ff);
+	background: linear-gradient(to right, #00dbde, #fc00ff);
+}
+
 .mainpage {
 	font-weight: 400;
 	font-size: 25pt;
