--- a/css/personal.css
+++ b/css/personal.css
@@ -10,10 +10,10 @@ s
 	opacity: 0.65;
 	background-position: center;
 	background-size: cover;
-
+	background-repeat: no-repeat;
 }
 .bgimg-1 {
-	background-image: url("images/5.jpg");
+	background-image: url("../images/5.jpg");
 	min-height: 100%;
 }
 
