--- a/css/personal.css
+++ b/css/personal.css
@@ -1,13 +1,19 @@
-body, html {
-  height: 100%;
-  margin: 0;
-  font: 400 15px/1.8 "Lato", sans-serif;
-  color: #777;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
-.bg-1, .bg-2, .bg-3 {
+body, html {
+	height: 100%;
+	margin: 0;
+	color: #777;
+	font: 400 15px/1.8 "Proxima", sans-serif;
+}
+
+.bg-1, .bg-2, .bg-3, .bg-4, .bg-5, .bg-6 {
 	position: relative;
-	opacity: 0.65;
+	/*opacity: 0.65;*/
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -18,26 +24,105 @@ body, html {
 	min-height: 100%;
 }
 
-.caption {
-  position: absolute;
-  left: 0;
-  top: 80%;
-  width: 100%;
-  text-align: center;
-  color: #000;
+.bg-2 {
+	background-image: url("../images/2.jpg");
+	min-height: 100%;
 }
 
-.caption span.border {
-  background-color: #111;
-  color: #fff;
-  padding: 18px;
-  font-size: 25px;
-  letter-spacing: 10px;
+.bg-3 {
+	background-image: url("../images/11.jpg");
+	min-height: 100%;
+}
+
+.bg-4 {
+	background-image: url("../images/12.jpg");
+	min-height: 100%;
+}
+
+.bg-5 {
+	background-image: url("../images/12.jpg");
+	min-height: 100%;
+}
+
+.bg-6 {
+	background-image: url("../images/2.jpg");
+	min-height: 100%;
+}
+
+.bg-detail-container {
+	color: #777;
+	background-color:white;
+	text-align:center;
+	padding:50px 80px;
+	text-align: justify;
+}
+
+.bg-details {
+	text-align:left;
+	margin-left: 150px;
+}
+
+.caption-overlay {
+	background-color: rgba(0,0,0,.2);
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	/*z-index: -1;*/
+}
+
+.caption {
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 100%;
+	/*text-align: center;*/
+	color: #000;
+}
+
+.caption-img {
+	position: absolute;
+	left: 3%;
+	top: 35%;
+	width: 200px;
+	height: 200px;
+	background-image: url("../images/12.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-radius: 50%;
+	border: 15px solid rgb(137, 183, 204);
+	opacity: 1;
+}
+
+.caption div.border {
+	background: rgba(137, 183, 204);;
+	color: #fff;
+}
+
+.caption div.border div.border-details {
+	padding: 15px;
+	margin-left: 20%;
+}
+
+.caption span {
+	/*background: rgba(137, 183, 204);*/
+	color: #fff;
+	/*padding: 18px;*/
+	font-size: 25px;
+	letter-spacing: 10px;
 }
 
 h3 {
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  font: 20px "Lato", sans-serif;
-  color: #111;
+	letter-spacing: 5px;
+	text-transform: uppercase;
+	font: 20px "Lato", sans-serif;
+	color: #111;
+}
+
+@media only screen and (max-device-width: 1024px) {
+	.bg-details {
+		margin-left: 0px;
+	}
 }
