--- a/css/personal.css
+++ b/css/personal.css
@@ -36,11 +36,11 @@ body, html {
 }
 
 .bg-5, .c-5 {
-	background-image: url("../images/12.jpg");
+	background-image: url("../images/20.jpg");
 }
 
 .bg-6, .c-6 {
-	background-image: url("../images/2.jpg");
+	background-image: url("../images/17.jpg");
 }
 
 .bg-detail-container {
@@ -52,8 +52,8 @@ body, html {
 }
 
 .bg-details {
-	text-align:left;
-	margin-left: 150px;
+	text-align: center;
+	/*margin-left: 150px;*/
 }
 
 .caption-overlay {
